# data-analyst-agent

./: .gitignore  README.md  agent.py  app.py  chainlit.md  compare.py  pyproject.toml
.chainlit/: config.toml
data/: campaigns.csv
prompts/: __init__.py  v1_basic.py  v2_structured.py  v3_analytical.py  v4_professional.py
public/: custom.css
