[project]
name = "data-analyst-agent"
version = "0.1.0"
description = "Data analysis agent with code interpreter"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
    "chainlit>=1.0.0",
    "tabulate>=0.9.0",
]

[project.scripts]
analyst = "agent:main"
